# egl-utils-c

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  spec-d4np-utils-c.md
.eaao-core/eaao-governance/: README.md
.eaao-core/orchestrator/: project.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
bench/concurrency/: bench_concurrency.c  perf_gate.c
bench/ds/: bench_ds.c
bench/mem/: bench_mem.c
cmake/: d4np-cConfig.cmake.in
d4np/: d4np_c.h
d4np/concurrency/: atomic_queue.c  atomic_queue.h  mutex.c  mutex.h  named_semaphore.c  named_semaphore.h  semaphore.c  semaphore.h  thread_pool.c  thread_pool.h
d4np/core/: d4np_allocator.c  d4np_allocator.h  d4np_status.c  d4np_status.h  version.h
d4np/ds/: hashmap.c  hashmap.h  linked_list.c  linked_list.h  ring_buffer.c  ring_buffer.h  string_builder.c  string_builder.h  vector.c  vector.h
d4np/io/: file.c  file.h  path.c  path.h
d4np/mem/: arena.c  arena.h  pool.c  pool.h
d4np/str/: parse.c  parse.h  str_view.c  str_view.h
d4np/sys/: clock.c  clock.h  error_context.c  error_context.h  hash.c  hash.h  log.c  log.h  uuid.c  uuid.h
docs/: Doxyfile  README.md
docs/adr/: 0002-adopt-module-oriented-source-layout.md  0003-enforce-line-coverage-gate.md  0004-generate-api-docs-with-doxygen.md  0005-package-via-cmake-export-vcpkg-and-conan.md  0006-require-c11-language-floor.md  0007-named-ipc-semaphore-and-perf-gate.md  0008-freeze-public-abi-for-1x.md  README.md
docs/api/: mainpage.md
docs/benchmarks/: README.md
docs/bugs/: README.md
docs/changelog/v1/: v1.0.0.md
docs/development/: compatibility.md  local-build.md
docs/patterns/: README.md
docs/releases/: README.md  v1.0.0.md
docs/specs/: 01_spec_d4np.md
docs/workflow/: documentation.md  git-workflow.md  github-setup.md  maintenance.md  packaging.md  release.md
packaging/conan/: conanfile.py
packaging/conan/test_package/: CMakeLists.txt  conanfile.py  example.c
packaging/consumer-test/: CMakeLists.txt  main.c
packaging/vcpkg/: portfile.cmake  vcpkg.json
tests/: test_main.c  test_threads.h  tests.h
tests/concurrency/: named_sem_harness.c  test_atomic_queue.c  test_mutex.c  test_named_semaphore.c  test_semaphore.c  test_thread_pool.c
tests/ds/: test_hashmap.c  test_linked_list.c  test_ring_buffer.c  test_string_builder.c  test_vector.c
tests/io/: test_file.c  test_path.c
tests/mem/: test_arena.c  test_pool.c
tests/str/: test_parse.c  test_str_view.c
tests/sys/: test_clock.c  test_error_context.c  test_hash.c  test_log.c  test_uuid.c
tools/: consistency_lint.py  coverage.sh
